--- a/package.json
+++ b/package.json
@@ -5,30 +5,23 @@
   "scripts": {
     "build": "tsc -p .",
     "dev": "ts-node-dev './src/teste.ts'",
-    "lint": "eslint . --ext .ts",
-    "lint-fix": "eslint . --ext .ts --fix",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "description": "dsa in typescript",
-  "main": "index.js",
+  "main": "'/src/intex.ts'",
   "repository": "https://github.com/filipe-muniz/dsa-typescript",
   "author": "filipe-muniz",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.36.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
     "prettier": "^2.8.4",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.2",
-    "eslint-plugin-prettier": "^4.2.1"
-  },
-  "lint-staged": {
-    "*": [
-      "eslint --fix",
-      "prettier --write --loglevel error"
-    ]
+    "typescript": "^5.0.2"
   }
 }
